<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_car_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/img_car_logo"
                app:srcCompat="@drawable/vta_car_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/txv_car_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:text="@string/txv_car_name" />

                <TextView
                    android:id="@+id/txv_owner_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txv_owner_title" />
            </LinearLayout>

            <!--                app:drawableLeftCompat="@drawable/vta_car_logo" />-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>